# wrkt

./: .clang-format  .gitignore  ARCHITECTURE.md  README.md  flake.nix  justfile
.github/workflows/: ci.yml
app/: package-lock.json  package.json  rescript.json
app/rescript/: TrackerEngine.bs.js  TrackerEngine.res
docs/: architecture-notes.md  development-guidelines.md  integrations.md  pack-creation-guide.md  persistence.md  product-requirements.md  testing.md
integrations/jsi/: PLAN.md
integrations/jsi/ios/: TrackerEngineBinding.cpp
llm/: ARCHITECTURE.md  GUIDELINES.md  client-app.md  tasks.md
persistence/: README.md  storage_interface.md
strata/: Cargo.toml  README.md
strata/.cargo/: config.toml
strata/crates/tracker_analytics/: Cargo.toml
strata/crates/tracker_analytics/src/: distribution.rs  heatmap.rs  lib.rs  streak.rs  time_bucket.rs
strata/crates/tracker_catalog/: Cargo.toml
strata/crates/tracker_catalog/src/: lib.rs  migration.rs  storage.rs  types.rs  validation.rs
strata/crates/tracker_dsl/: Cargo.toml
strata/crates/tracker_dsl/src/: ast.rs  dsl.pest  lib.rs  parser.rs
strata/crates/tracker_engine/: Cargo.toml
strata/crates/tracker_engine/src/: error_adapter.rs  lib.rs
strata/crates/tracker_eval/: Cargo.toml
strata/crates/tracker_eval/src/: lib.rs
strata/crates/tracker_export/: Cargo.toml
strata/crates/tracker_export/src/: lib.rs
strata/crates/tracker_ffi/: Cargo.toml
strata/crates/tracker_ffi/src/: lib.rs
strata/crates/tracker_ffi/tests/: ffi_integration.rs
strata/crates/tracker_ffi_core/: Cargo.toml
strata/crates/tracker_ffi_core/src/: lib.rs
strata/crates/tracker_ir/: Cargo.toml
strata/crates/tracker_ir/src/: error.rs  error_legacy.rs  lib.rs
strata/crates/tracker_planning/: Cargo.toml
strata/crates/tracker_planning/src/: engine.rs  lib.rs  strategies.rs  types.rs
strata/view/src/domain/: errors.ts
tracker-core/: README.md
tracker-core/crates/tracker_catalog/: Cargo.toml
tracker-core/crates/tracker_catalog/src/: lib.rs
tracker-core/crates/tracker_dsl/: Cargo.toml
tracker-core/crates/tracker_dsl/src/: lib.rs
tracker-core/crates/tracker_engine/: Cargo.toml
tracker-core/crates/tracker_engine/src/: lib.rs
tracker-core/crates/tracker_eval/: Cargo.toml
tracker-core/crates/tracker_eval/src/: lib.rs
tracker-core/crates/tracker_ffi/: Cargo.toml
tracker-core/crates/tracker_ir/src/: lib.rs
view/: README.md  app.json  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
view/android/: settings.gradle
view/android/app/: build.gradle
view/android/app/src/main/: AndroidManifest.xml
view/android/app/src/main/cpp/: CMakeLists.txt  TrackerEngineBinding.cpp  TrackerEngineBinding.h  TrackerEngineTurboModule.cpp
view/android/app/src/main/java/com/wrkt/: MainActivity.kt  MainApplication.kt  PlatformConstantsPackage.kt  TrackerEngineModule.kt  TrackerEnginePackage.kt
view/android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
view/android/app/src/main/res/values/: strings.xml
view/ios/: StrataHermesFactory.mm  TrackerEngineBinding.h  TrackerEngineBinding.mm
view/ios/Strata/TrackerFFI.xcframework/: Info.plist
view/ios/view/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
view/ios/view.xcodeproj/: project.pbxproj
view/ios/view.xcodeproj/xcshareddata/xcschemes/: view.xcscheme
view/ios/view/Images.xcassets/AppIcon.appiconset/: Contents.json
view/patches/: react-native-document-picker+9.3.1.patch
view/src/: App.tsx  TrackerEngine.ts  storage.ts  timePolicy.ts  workoutFlows.ts
view/src/components/: ErrorBoundary.tsx
view/src/components/analytics/: AnalyticsChartHeader.tsx  AnalyticsChartModal.tsx  AnalyticsDataContext.tsx  AnalyticsInlineSelect.tsx  AnalyticsRangeSelector.tsx  AnalyticsSelect.tsx  AnalyticsTabs.tsx  DonutChart.tsx  SkiaHeatmap.tsx  SkiaTrendChart.tsx  analyticsBreakdown.ts  analyticsDrilldown.ts  analyticsExercises.ts  analyticsPayload.ts  analyticsRanges.ts  analyticsUtils.ts  analyticsWorkouts.ts  useAnalyticsSummary.ts  useExerciseTrendSeries.ts
view/src/domain/: analytics.ts  errors.ts  types.ts
view/src/exercise/: catalogStorage.ts  search.ts
view/src/export/: sqliteExport.ts
view/src/hooks/: index.ts  useMetrics.ts  useWorkoutData.ts
view/src/i18n/: strings.ts
view/src/import/: fitnotes.ts
view/src/navigation/: AppNavigator.tsx  BottomNav.tsx  ScreenShell.tsx  navigationUtils.ts
view/src/perf/: bridgePerf.ts
view/src/routes/: ScreenShell.tsx  StackRoutes.tsx  TabRoutes.tsx  index.ts
view/src/screens/: AnalyticsBreakdown.tsx  AnalyticsDashboard.tsx  AnalyticsExercises.tsx  AnalyticsHub.tsx  AnalyticsScreen.tsx  AnalyticsWorkouts.tsx  CalendarScreen.tsx  ExerciseBrowser.tsx  HistoryScreen.tsx  HomeScreen.tsx  ImportSummaryScreen.tsx  LoggingScreen.tsx  MoreScreen.tsx  SuggestionsScreen.tsx
view/src/state/: appContext.tsx  appState.ts  persistence.ts
view/src/state/actions/: navigation.ts
view/src/types/: svg.d.ts
view/src/ui/: HorizontalSwipePager.tsx  ScreenHeader.tsx  color.ts  components.tsx  formatters.ts  muscleColors.ts  theme.ts  useKeyboardViewportInset.ts
view/src/ui/lists/: useMeasuredCardHeight.ts
view/src/ui/pager/: PagerTabsRail.tsx  usePagerTabsController.ts
view/src/utils/: asyncUtils.ts  performance.ts
workout-pack/: Cargo.toml  PLANNING.md  README.md  build.rs
workout-pack/config/: exercise_catalog.json  workout_v1.tracker
workout-pack/crates/workout_ffi/: Cargo.toml
workout-pack/crates/workout_ffi/src/: lib.rs
workout-pack/src/: analytics.rs  catalog.rs  catalog_key.rs  lib.rs  metrics.rs  strategy.rs  time_policy.rs
workout-pack/src/analytics/: composite_summary.rs  event_metrics.rs  mod.rs  types.rs
workout-pack/src/import/: fitnotes.rs  mod.rs
