[workspace]
resolver = "2"
members = [
    "crates/tracker_dsl",
    "crates/tracker_ir",
    "crates/tracker_engine",
    "crates/tracker_eval",
    "crates/tracker_catalog",
    "crates/tracker_ffi_core",
    "crates/tracker_ffi",
    "crates/tracker_analytics",
    "crates/tracker_export",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
readme = "README.md"
description = "Generic tracker core written in Rust; integrates with RN clients via FFI."

[workspace.dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
time = { version = "0.3", features = ["macros"] }

tracker_analytics = { version = "0.1.0", path = "crates/tracker_analytics" }
tracker_catalog = { version = "0.1.0", path = "crates/tracker_catalog" }
tracker_dsl = { version = "0.1.0", path = "crates/tracker_dsl" }
tracker_engine = { version = "0.1.0", path = "crates/tracker_engine" }
tracker_eval = { version = "0.1.0", path = "crates/tracker_eval" }
tracker_export = { version = "0.1.0", path = "crates/tracker_export" }
tracker_ffi = { version = "0.1.0", path = "crates/tracker_ffi" }
tracker_ffi_core = { version = "0.1.0", path = "crates/tracker_ffi_core" }
tracker_ir = { version = "0.1.0", path = "crates/tracker_ir" }
