[package]
name = "workout_pack"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "crates/workout_ffi"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracker_ir = { path = "../strata/crates/tracker_ir" }
tracker_engine = { path = "../strata/crates/tracker_engine" }
tracker_analytics = { path = "../strata/crates/tracker_analytics" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
