[package]
name = "tracker_engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracker_ir.workspace = true
tracker_eval.workspace = true
tracker_dsl.workspace = true
