[package]
name = "tracker_ffi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracker_engine = { path = "../tracker_engine" }
tracker_ir = { path = "../tracker_ir" }
tracker_export = { path = "../tracker_export" }

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
