[package]
name = "tracker_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
tracker_ffi_core.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
