[package]
name = "tracker_ffi_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracker_engine.workspace = true
tracker_ir.workspace = true
tracker_export.workspace = true
